fixes icon contrast issue and sanitizes id links better

--- a/app/_components/heading/heading.css
+++ b/app/_components/heading/heading.css
@@ -36,7 +36,6 @@ div.heading-component {
         &:focus,
         &:active {
             svg {
-                fill: var(--highlight-color);
                 transform: scale(1.1);
             }
         }
